[gd_scene load_steps=34 format=3 uid="uid://jeihxw20nydi"]

[ext_resource type="Script" path="res://main/level.gd" id="1_tycjl"]
[ext_resource type="PackedScene" uid="uid://b3osahesu8vvn" path="res://camera/player_camera.tscn" id="1_y5qgp"]
[ext_resource type="Script" path="res://main/height_detector.gd" id="2_11x3m"]
[ext_resource type="PackedScene" uid="uid://dn3bd5aclabxe" path="res://game_object/table/table.tscn" id="2_kp88t"]
[ext_resource type="PackedScene" uid="uid://bcqgjd3l2f1sm" path="res://billboard/billboard.tscn" id="3_a3m6j"]
[ext_resource type="PackedScene" uid="uid://clngcuh1vawvw" path="res://game_object/golfball/golf_ball.tscn" id="3_rfsl0"]
[ext_resource type="PackedScene" uid="uid://516yvd011d4p" path="res://game_object/football/foot_ball.tscn" id="4_xan4c"]
[ext_resource type="PackedScene" uid="uid://b4ckgjiuaqsuw" path="res://game_object/beachball/beach_ball.tscn" id="5_7w4q0"]
[ext_resource type="PackedScene" uid="uid://be0p0p4t8aqt6" path="res://hud/hud.tscn" id="6_ufsw2"]
[ext_resource type="PackedScene" uid="uid://dvex3p54ywo5a" path="res://game_object/stepladder/step_ladder.tscn" id="6_wbhtt"]
[ext_resource type="PackedScene" uid="uid://6o1e2bom3n0q" path="res://game_object/banana/banana.tscn" id="7_c0m3e"]
[ext_resource type="PackedScene" uid="uid://d16adc8cfh5cy" path="res://main/gameplay/scaling_gauge.tscn" id="8_7lvbe"]
[ext_resource type="PackedScene" uid="uid://hrg6wqxvcyb6" path="res://game_object/wheel/wheel.tscn" id="8_gx5w5"]
[ext_resource type="PackedScene" uid="uid://bbyw2biblghj5" path="res://game_object/anvil/anvil.tscn" id="8_ylhf7"]
[ext_resource type="Script" path="res://main/gameplay/scaling_gauge.gd" id="9_6u6kg"]
[ext_resource type="PackedScene" uid="uid://btil01b1js8kr" path="res://game_object/bucket/bucket.tscn" id="10_xpell"]
[ext_resource type="PackedScene" uid="uid://46v17b0hf4ta" path="res://game_object/crown/crown.tscn" id="11_qnvhb"]
[ext_resource type="PackedScene" uid="uid://cbfqri6wfv86j" path="res://game_object/plank/plank.tscn" id="12_oqme4"]
[ext_resource type="PackedScene" uid="uid://304lx1qxb5wi" path="res://game_object/rocks/rock1/rock1.tscn" id="13_du4r6"]
[ext_resource type="Script" path="res://camera/win_viewport.gd" id="13_jcre4"]
[ext_resource type="PackedScene" uid="uid://rhpvvtu8fhvt" path="res://game_object/rocks/rock2/rock2.tscn" id="14_tgja4"]
[ext_resource type="PackedScene" uid="uid://jmieyh71fv35" path="res://game_object/rocks/rock3/rock3.tscn" id="15_tuxhw"]
[ext_resource type="PackedScene" uid="uid://dwl2tiq2c2xy4" path="res://game_object/joystick/joystick.tscn" id="16_knfnx"]

[sub_resource type="BoxMesh" id="BoxMesh_d0g7d"]
size = Vector3(100, 10, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_85j64"]
albedo_color = Color(0.368102, 0.368102, 0.368102, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_s75uj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jcetm"]
size = Vector3(100, 1, 100)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5jlxj"]
sky_top_color = Color(0.704639, 0.704639, 0.704639, 1)
sky_horizon_color = Color(0.701315, 0.701314, 0.701315, 1)
sky_curve = 0.130582
ground_bottom_color = Color(0.368627, 0.368627, 0.368627, 1)
ground_horizon_color = Color(0.701961, 0.701961, 0.701961, 1)

[sub_resource type="Sky" id="Sky_eouk7"]
sky_material = SubResource("ProceduralSkyMaterial_5jlxj")

[sub_resource type="Environment" id="Environment_4nusp"]
background_mode = 2
sky = SubResource("Sky_eouk7")

[sub_resource type="Curve3D" id="Curve3D_6nq7e"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.938, 9, -2.247, 0, 0, 0, 0, 0, 0, 7.577, 9, -2.01, 0, 0, 0, 0, 0, 0, 8.563, 9, 7.741, 0, 0, 0, 0, 0, 0, -7.802, 9, 6.765, 0, 0, 0, 0, 0, 0, -5.938, 9, -2.247),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxMesh" id="BoxMesh_3e5qp"]

[sub_resource type="SphereMesh" id="SphereMesh_xg4oo"]

[node name="Level" type="Node3D" node_paths=PackedStringArray("_win_viewport")]
script = ExtResource("1_tycjl")
object_pool = Array[PackedScene]([ExtResource("2_kp88t"), ExtResource("3_rfsl0"), ExtResource("4_xan4c"), ExtResource("5_7w4q0"), ExtResource("6_wbhtt"), ExtResource("8_gx5w5"), ExtResource("8_ylhf7"), ExtResource("7_c0m3e"), ExtResource("10_xpell"), ExtResource("11_qnvhb"), ExtResource("12_oqme4"), ExtResource("13_du4r6"), ExtResource("14_tgja4"), ExtResource("15_tuxhw"), ExtResource("16_knfnx")])
no_movement_duration_before_game_win = 1.0
main_menu_scene = "res://main/main_menu.tscn"
_win_viewport = NodePath("WinViewport")

[node name="Ground" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="MeshiInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
mesh = SubResource("BoxMesh_d0g7d")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_85j64")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("WorldBoundaryShape3D_s75uj")

[node name="PlayerCamera" parent="." instance=ExtResource("1_y5qgp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.179205, 2.74989, 5.72712)
moving_speed = 4.0

[node name="Objects" type="Node3D" parent="."]

[node name="Billboard" parent="." instance=ExtResource("3_a3m6j")]

[node name="HeightDetector" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.5813, 0)
shape = SubResource("BoxShape3D_jcetm")
target_position = Vector3(0, 0, 0)
collision_mask = 2
script = ExtResource("2_11x3m")

[node name="Timer" type="Timer" parent="HeightDetector"]
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4nusp")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 8.30557, 3.48861)
light_color = Color(0.641934, 0.641934, 0.641934, 1)
shadow_enabled = true

[node name="HUD" parent="." instance=ExtResource("6_ufsw2")]

[node name="GaugeBar" parent="HUD/GaugeZone/VBoxContainer/MarginContainer" index="0" node_paths=PackedStringArray("gauge")]
gauge = NodePath("../../../../../ScalingGauge")

[node name="SpawnBorders" type="Path3D" parent="."]
curve = SubResource("Curve3D_6nq7e")

[node name="ScalingGauge" parent="." instance=ExtResource("8_7lvbe")]
script = ExtResource("9_6u6kg")
max_value = 300
_initial_value = 150

[node name="camTarget" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.22683, 0, -5.57357)

[node name="WinViewport" type="SubViewport" parent="." node_paths=PackedStringArray("debugA", "debugB")]
handle_input_locally = false
render_target_update_mode = 4
script = ExtResource("13_jcre4")
camera_distance = 6.4
debugA = NodePath("../debugA")
debugB = NodePath("../debugB")

[node name="ScreenshotCamera" type="Camera3D" parent="WinViewport"]
transform = Transform3D(0.438669, 0, 0.898649, 0, 1, 0, -0.898649, 0, 0.438669, -23.0012, -33.9494, 4.12803)
cull_mask = 1048573
v_offset = -1.0

[node name="debugA" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_3e5qp")

[node name="debugB" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_xg4oo")

[node name="Anvil" parent="." instance=ExtResource("8_ylhf7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25619, 1.03904, 0.790102)

[editable path="HUD"]
